feat: API validation
